Add project file

--- a/model.ipynb
+++ b/model.ipynb
@@ -720,6 +720,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba578916",
+   "metadata": {},
+   "source": [
+    "# Read on Project Scope to begin work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b89b919",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
